--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,4 +9,4 @@ v1.0.3 :
 
 v1.0.4 :
 	- SimpleConfig : suppression des messages d'erreur des sections manquantes
-	  
+	- SimpleConfig: ordre de chargement des sections : la section demand├®e ou default ou la premi├¿re si default n'existe pas  
