--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,4 +10,8 @@ v1.0.3 :
 v1.0.4 :
 	- SimpleConfig : suppression des messages d'erreur des sections manquantes
 	- SimpleConfig: ordre de chargement des sections : la section demandée ou default ou la première si default n'existe pas
-	- ConfigFileDao: correction message incomplet sur erreur de chargement de l'accord de versement  
+	- ConfigFileDao: correction message incomplet sur erreur de chargement de l'accord de versement
+	
+v1.0.5 :
+	- Retour des erreurs sur stderr pour tests automatisés
+	
