Correction d'une NullPointerException dans le cas où KeywordReference[@schemeID] n'existe pas

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,4 +14,4 @@ v1.0.4 :
 	
 v1.0.5 :
 	- Retour des erreurs sur stderr pour tests automatisés
-	
+	- Correction NullPointerException quand Keyword n'a pas de ArchivalAgencyObjectIdentifer/schemeID
