Correction bug dans la récupération du schemeID des FilePlanPosition

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,3 +24,4 @@ v1.0.5 :
 	- Vidage du fichier de traces dans le cas où il n'y a pas d'erreurs
 	- Récupèration de la taille des documents dans les données métier si elle est fournie
 	- Calcul de la taille des documents des unités documentaires en SEDA 0.2
+	- Correction bug sur récupération du schemeID des FilePlanPosition
