--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,4 @@
-v1.0.1 :
+﻿v1.0.1 :
 	- Deconnexion possible de la base de données.
 v1.0.2 : 
 	- Contains.Name > ContainsName
@@ -25,3 +25,6 @@ v1.0.5 :
 	- Récupèration de la taille des documents dans les données métier si elle est fournie
 	- Calcul de la taille des documents des unités documentaires en SEDA 0.2
 	- Correction bug sur récupération du schemeID des FilePlanPosition
+	
+v1.0.7 :
+	- Suppression du déclenchement de RuntimException pour les balises Duration, Receipt, ...
