--- a/Changelog.txt
+++ b/Changelog.txt
@@ -38,3 +38,7 @@ v1.1.1 :
 v1.1.3 :
 	- Correction bug des dates extrêmes non calculées sur les unités documentaires sans documents
 	
+v1.1.4 :
+	- Ajout de 3 paramètres d'exécution pour redéfinir fichier de données métier, répertoire des documents et fichier de bordereau 
+	
+	
