--- a/Changelog.txt
+++ b/Changelog.txt
@@ -44,3 +44,6 @@ v1.1.4 :
 v1.1.5 :
 	- Imbrication de documents et unités documentaires dans une même unité documentaire en SEDA v1.0.
 	
+v1.1.6 :
+	- Métadonnées cycle de vie et service versant dans les données métier
+	
