--- a/Changelog.txt
+++ b/Changelog.txt
@@ -46,4 +46,10 @@ v1.1.5 :
 	
 v1.1.6 :
 	- Métadonnées cycle de vie et service versant dans les données métier
+
+v1.1.7 :
+	- Génération CustodialHistory et CustodialHistoryItem en SEDA 1.0
+
+v1.1.8 :
+	- Correction du calcul des dates extrêmes
 	
